[project]
name = "pytorchrl"
version = "0.1.0"
description = ""
authors = [
    {name = "fimo",email = "moritz.johannes.fischer@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "torchrl (>=0.6.0,<0.7.0)",
    "tensordict (>=0.6.2,<0.7.0)",
    "optuna (>=4.2.0,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "gymnasium (<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
