[project]
name = "pytorchrl"
version = "0.1.0"
description = ""
authors = [
    {name = "fimo",email = "moritz.johannes.fischer@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "torchrl (>=0.6.0,<0.7.0)",
    "tensordict <=0.6.1",
    "optuna (>=4.2.0,<5.0.0)",
    "av (>=13.0.0,<14.0.0)",
    "numpy (<=1.26.4)",
    "gym (>=0.26.2)",
    "pygame (>2.6.0)",
    "torchvision (>=0.20.1,<0.21.0)",


]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
